Updated About Me

--- a/public/index.html
+++ b/public/index.html
@@ -428,7 +428,7 @@
           <span class="ml-2 mr-2">·</span>
           
 
-          <span>Country </span>
+          <span>United Kingdom </span>
         </div>
         <div class="flex-shrink-0"> June 2018 - Sept. 2018</div>
       </div>
@@ -459,7 +459,7 @@
           <span class="ml-2 mr-2">·</span>
           
 
-          <span>Country </span>
+          <span>United Kingdom </span>
         </div>
         <div class="flex-shrink-0"> July 2017 - Sept. 2017</div>
       </div>
