--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=en><meta charset=utf-8>
 <meta name=viewport content="width=device-width">
-<title>Maximilian Britton</title>
+<title>Projects | Maximilian Britton</title>
 <meta name=generator content="Hugo Eureka 0.8.0">
 <link rel=stylesheet href=/css/eureka.min.css>
 <script defer src=/js/eureka.min.js></script>
@@ -18,15 +18,15 @@
 <link rel=icon type=image/png sizes=32x32 href=/images/icon_hu64421c6c7700f606f0ad45d807017b09_5843_32x32_fill_box_center_3.png>
 <link rel=apple-touch-icon sizes=180x180 href=/images/icon_hu64421c6c7700f606f0ad45d807017b09_5843_180x180_fill_box_center_3.png>
 <meta name=description content="My little corner of the internet.">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Maximilian Britton","item":"/"},{"@type":"ListItem","position":2,"name":"404 Page not found","item":"/404.html"}]}</script>
-<meta property="og:title" content="Maximilian Britton">
+<meta property="og:title" content="Projects | Maximilian Britton">
 <meta property="og:type" content="website">
 <meta property="og:image" content="/images/icon.png">
-<meta property="og:url" content="/404.html">
+<meta property="og:url" content="/projects/">
 <meta property="og:description" content="My little corner of the internet.">
 <meta property="og:locale" content="en">
 <meta property="og:site_name" content="Maximilian Britton">
-<meta property="article:section" content>
+<meta property="article:section" content="projects">
+<link rel=alternate type=application/rss+xml href=/projects/index.xml title="Maximilian Britton">
 <body class="flex flex-col min-h-screen">
 <header class="fixed flex items-center w-full min-h-16 pl-scrollbar z-50 bg-secondary-bg shadow-sm">
 <div class="w-full max-w-screen-xl mx-auto"><script>let storageColorScheme=localStorage.getItem("lightDarkMode");((storageColorScheme=='Auto'||storageColorScheme==null)&&window.matchMedia("(prefers-color-scheme: dark)").matches||storageColorScheme=="Dark")&&document.getElementsByTagName('html')[0].classList.add('dark')</script>
@@ -62,8 +62,12 @@
 <main class="flex-grow pt-16">
 <div class=pl-scrollbar>
 <div class="w-full max-w-screen-xl lg:px-4 xl:px-8 mx-auto">
-<div class="bg-secondary-bg rounded overflow-hidden mt-12 px-4 py-32 text-center">
-<span class=text-3xl>404 - Page not found</span>
+<article class="mx-6 my-8">
+<h1 class="font-bold text-3xl text-primary-text">Projects</h1>
+</article>
+<div class="bg-secondary-bg rounded px-6">
+<div class="overflow-hidden divide-y">
+</div>
 </div>
 </div>
 </div>
