--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <script defer src=https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js integrity=sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa crossorigin></script>
 <script>document.addEventListener("DOMContentLoaded",function(){renderMathInElement(document.body,{delimiters:[{left:"$$",right:"$$",display:!0},{left:"$",right:"$",display:!1},{left:"\\(",right:"\\)",display:!1},{left:"\\[",right:"\\]",display:!0}]})})</script>
 <script defer src=https://cdn.jsdelivr.net/npm/mermaid@8.9.2/dist/mermaid.min.js integrity="sha256-Zmpaaj+GXFsPF5WdPArSrnW3b30dovldeKsW00xBVwE=" crossorigin></script>
-<link rel=icon type=image/png sizes=32x32 href=/images/icon_hu64421c6c7700f606f0ad45d807017b09_5843_32x32_fill_box_center_3.png>
-<link rel=apple-touch-icon sizes=180x180 href=/images/icon_hu64421c6c7700f606f0ad45d807017b09_5843_180x180_fill_box_center_3.png>
+<link rel=icon type=image/png sizes=32x32 href=/images/icon_hu105cb6b3c059259b4f3aa33761ca8f20_7828_32x32_fill_box_center_3.png>
+<link rel=apple-touch-icon sizes=180x180 href=/images/icon_hu105cb6b3c059259b4f3aa33761ca8f20_7828_180x180_fill_box_center_3.png>
 <meta name=description content="My little corner of the internet.">
 <meta property="og:title" content="Maximilian Britton">
 <meta property="og:type" content="website">
@@ -97,7 +97,7 @@ Mechanical Engineer, Programmer, F1 Enthusiast
 <p>🥇 My high school highlight was winning the <a href=https://www.f1inschools.com/>F1 in Schools</a> STEM competition alongside my brother. The prize? A full scholarship to UCL to study Mechanical Engineering.</p>
 <p>📚 At university, I used my engineerings smarts to make up for my lack of racecar driving ability to develop a Reinforcement Learning based self-driving race car. It didn&rsquo;t work well, but I learned a lot on the way!</p>
 <p>🏁 As my ambitions grew, I realized I couldn&rsquo;t achieve my dreams on my own. In third year, I lead our Formula Student (Formula SAE) team to competition for the first time in five years. Since then, I&rsquo;ve used my honed in skills to race Formula 1 cars in the pinnacle of motorsport.</p>
-<p>🪐 I&rsquo;m really excited about <a href=https://julialang.org/>JuliaLang</a> and <a href=sciml.ai>Scientific Machine Learning</a> and believe the future of scientific modelling lies in levering machine learning to combine centuries of physics-based modelling with the vast quantities of data available today. In my future, I hope to use my skills to fight climate change and equip humanity to explore the Moon, Mars and beyond.</p>
+<p>🪐 I&rsquo;m really excited about <a href=https://julialang.org/>JuliaLang</a> and <a href=https://sciml.ai>Scientific Machine Learning</a> and believe the future of scientific modelling lies in levering machine learning to combine centuries of physics-based modelling with the vast quantities of data available today. In my future, I hope to use my skills to fight climate change and equip humanity to explore the Moon, Mars and beyond.</p>
 </div>
 </div>
 </div>
